# hvac-air-quality-analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_CONTEXT.md  CLAUDE_OLD.md  CLEAN_HISTORY.md  DATA_DICTIONARY.md  HVACMonitor_v3.gs  NEXT_PHASE.md  PROJECT_STRUCTURE.md  README.md  RELEASE_CHECKLIST.md  RELEASING.md  REORGANIZATION_SUMMARY.md  SHEETS_MIGRATION_GUIDE.md  START_HERE.md  SWITCH_TO_SHEETS_API.md  TROUBLESHOOTING.md  VISUALIZATION_WORKFLOW.md  analysis.ipynb  analysis_executed.ipynb  analyze_historical.py  analyze_sheets_mess.py  apps_script.gs  apps_script_code.gs  check_timestamps.py  cliff.toml  collect_air_quality.py  collect_multi_fixed.py  collect_multi_fixed.template.py  collect_with_sheets_api.py  collect_with_sheets_api_v2.py  export_notebook_images.py  filter_changes_template.csv  fix_sheets_schema.py  generate_wiki_images.py  pyproject.toml  (+10 more)
.claude/: settings.json
.claude/agents/: security-audit-precommit.md
.claude/skills/: hvac-status.md
.githooks/: pre-commit
.github/workflows/: claude-code-review.yml  code-review.yml  release.yml  test.yml
docs/: 5_MINUTE_INTERVALS.md  AI_ANALYSIS_PLAN.md  ARCHITECTURE.md  BACKLOG.md  DATA_DICTIONARY.md  ENVIRONMENT_SETUP.md  LESSONS_LEARNED.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  _config.yml  compass_artifact_wf-3ccdf152-4cd5-4980-94ce-0c430e8bbb21_text_markdown.md  dashboard-architecture.md  data-quality.md  findings.md  google-form-setup.md  index.md  indoor_airqualitys_hidden_impact_on_family_health.md  methodology.md  sheets-formulas.md  what-my-homes-air-taught-me.md
docs/charts/: co2_bedroom_levels.html  filter_efficiency.html  indoor_vs_outdoor_pm25.html
docs/plans/: 2026-04-17-001-fix-monitoring-sprint-plan.md
docs/reports/: README.md  findings.html
old_versions/: analysis-notebook.py  collect_air_quality_old.py  data-analyzer.py  env-example.sh  github-setup.md  project-summary.md  scheduler.py  setup-readme.md  setup-script.sh  unifi-setup-script.sh
reports/: README.md  findings.html
scripts/: _sheets_loader.py  bench_heatmap.py  create_visualizations.py  dashboard.py  fix_cron.sh  install-hooks.sh  read_sheets_simple.py  refresh_cache.py  setup_google_sheets_api.py
scripts/analysis/: analyze_complete_data.py  analyze_current_sheets.py  (+3 more)
systemd/: air-quality-collector.service  air-quality-collector.timer  install.sh
tests/: __init__.py  conftest.py  test_airthings_pm25.py  test_collect_air_quality.py
wiki/: Hardware-Setup.md  Home.md
(+8 files in other folders)
