[project]
name = "hvac-air-quality"
version = "0.1.0"
description = "Track HVAC filter efficiency to prevent asthma triggers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "plotly>=5.24.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    "gspread>=6.1.4",
    "google-auth>=2.36.0",
    "schedule>=1.2.2",
]

[project.scripts]
collect = "collect_air_quality:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "black>=24.10.0",
    "ruff>=0.7.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
